force-app/main/default/objects/Policy__c/fields/Amended_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Amended_Commission_Amount__c</fullName>
    <description>Returns amended commission rated based on total minus returned premium</description>
    <formula>(Sales_Price__c - Returned_Premium__c) *  Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amended Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>