force-app/main/default/objects/Policy__c/fields/Amended_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Amended_Total_Price__c</fullName>
    <description>Reduced total price by the returned premium amount</description>
    <formula>Total_Price__c - Returned_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amended Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>