force-app/main/default/objects/Policy__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allrisk</fullName>
            </value>
            <value>
                <fullName>AmWins</fullName>
            </value>
            <value>
                <fullName>Aon</fullName>
                <label>Aon Affinity</label>
            </value>
            <value>
                <fullName>Appalachian Underwriters</fullName>
            </value>
            <value>
                <fullName>Atlas</fullName>
            </value>
            <value>
                <fullName>Attune</fullName>
            </value>
            <value>
                <fullName>Brown &amp; Riding</fullName>
            </value>
            <value>
                <fullName>Citadel</fullName>
            </value>
            <value>
                <fullName>CM&amp;F</fullName>
            </value>
            <value>
                <fullName>Co-Efficient</fullName>
            </value>
            <value>
                <fullName>Dynamic Employer Solutions</fullName>
            </value>
            <value>
                <fullName>Embroker</fullName>
            </value>
            <value>
                <fullName>Francis L Dean</fullName>
            </value>
            <value>
                <fullName>Harbor.AI</fullName>
            </value>
            <value>
                <fullName>Hays/Assured</fullName>
            </value>
            <value>
                <fullName>JJ Insurance</fullName>
            </value>
            <value>
                <fullName>K &amp; K</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pathpoint</fullName>
            </value>
            <value>
                <fullName>RPS</fullName>
            </value>
            <value>
                <fullName>RT Speciality</fullName>
            </value>
            <value>
                <fullName>Slice</fullName>
            </value>
            <value>
                <fullName>SolePro</fullName>
            </value>
            <value>
                <fullName>State Pool</fullName>
            </value>
            <value>
                <fullName>Swett/CRC</fullName>
                <label>CRC Swett</label>
            </value>
            <value>
                <fullName>Thimble</fullName>
            </value>
            <value>
                <fullName>USG</fullName>
            </value>
            <value>
                <fullName>Veracity</fullName>
            </value>
            <value>
                <fullName>World Wide Speciality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>