force-app/main/default/objects/Policy__c/fields/Broker_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Carrier__c</fullName>
    <label>Broker Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>