force-app/main/default/objects/Policy__c/fields/Bunker_Admin_Link__c.field-meta.xml
<CustomField>
    <fullName>Bunker_Admin_Link__c</fullName>
    <label>Bunker Admin Link</label>
    <type>Url</type>
</CustomField>