force-app/main/default/objects/Policy__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Request - Unknown reason</fullName>
            </value>
            <value>
                <fullName>Non-payment</fullName>
            </value>
            <value>
                <fullName>Not needed anymore -Reason unknown</fullName>
            </value>
            <value>
                <fullName>Too much coverage purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>