force-app/main/default/objects/Policy__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ace Amer Ins Co</fullName>
            </value>
            <value>
                <fullName>Ace Amer Ins Co - Marketplace</fullName>
            </value>
            <value>
                <fullName>Ace Fire Underwriters Ins Co</fullName>
            </value>
            <value>
                <fullName>Ace Fire Underwriters Ins Co - Marketplace</fullName>
            </value>
            <value>
                <fullName>Ace Prop &amp; Cas Ins Co</fullName>
            </value>
            <value>
                <fullName>Ace Prop &amp; Cas Ins co - Marketplace</fullName>
            </value>
            <value>
                <fullName>Acuity</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>CFC Underwriting</fullName>
            </value>
            <value>
                <fullName>Chubb Indemnity Insurance Company - Marketplace</fullName>
            </value>
            <value>
                <fullName>Chubb National Insurance Company - Marketplace</fullName>
            </value>
            <value>
                <fullName>Coalition</fullName>
            </value>
            <value>
                <fullName>Coterie</fullName>
            </value>
            <value>
                <fullName>Crum and Forster</fullName>
            </value>
            <value>
                <fullName>Executive Risk Indemnity - Marketplace</fullName>
            </value>
            <value>
                <fullName>Federal Insurance Company - Marketplace</fullName>
            </value>
            <value>
                <fullName>Great American</fullName>
            </value>
            <value>
                <fullName>Hanover Ins Co GRP</fullName>
            </value>
            <value>
                <fullName>Hartford Cas Ins Co</fullName>
            </value>
            <value>
                <fullName>Hiscox Ins Co Inc</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual</fullName>
            </value>
            <value>
                <fullName>Markel Ins Co</fullName>
            </value>
            <value>
                <fullName>Mesa Underwriters</fullName>
            </value>
            <value>
                <fullName>Old Republic</fullName>
            </value>
            <value>
                <fullName>One Beacon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pacific Ind Ins Co</fullName>
            </value>
            <value>
                <fullName>Pacific Ind Ins Co - Marketplace</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>Progressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>