force-app/main/default/objects/Policy__c/fields/Carrier_Selection__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Selection__c</fullName>
    <label>Carrier Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Mechanical Turk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>