force-app/main/default/objects/Policy__c/fields/Owed_to_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Owed_to_Carrier__c</fullName>
    <formula>Total_Price__c  -  Product_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owed to Carrier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>