force-app/main/default/objects/Policy__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>