force-app/main/default/objects/Policy__c/fields/Product_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Commission_Amount__c</fullName>
    <formula>Commission_Rate__c  *  Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>