force-app/main/default/objects/Policy__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Must select a renewal or third-party renewal type opportunity for this field</errorMessage>
        <filterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal v2</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Third Party Renewal v2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies (Renewal Opportunity)</relationshipLabel>
    <relationshipName>Policies_For_Renewal</relationshipName>
    <type>Lookup</type>
</CustomField>