force-app/main/default/objects/Policy__c/fields/Returned_Premium__c.field-meta.xml
<CustomField>
    <fullName>Returned_Premium__c</fullName>
    <label>Returned Premium</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>