force-app/main/default/objects/Policy__c/fields/Surplus_Lines_Policy__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Lines_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surplus Lines Policy</label>
    <type>Checkbox</type>
</CustomField>