force-app/main/default/objects/Policy__c/validationRules/Billing_Type_Must_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Type_Must_Be_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Carrier_Selection__c , &quot;Mech Turk&quot;), 
ISCHANGED(  Term_Start_Date__c  ), 
ISPICKVAL(Billing_Type__c, &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Billing_Type__c</errorDisplayField>
    <errorMessage>Biling Type Must Be Selected</errorMessage>
</ValidationRule>