force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Policy_Number__c</columns>
    <columns>Term_Start_Date__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Cancelled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>